[gd_scene load_steps=3 format=3 uid="uid://bi3wvg21wy306"]

[ext_resource type="Script" uid="uid://d0km27f77ykb3" path="res://UI/MainMenu/main_menu.gd" id="1_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jld46"]
bg_color = Color(0.3180199, 0.31801975, 0.31801975, 1)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("sound_sliders", "sound_labels")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")
sound_sliders = [NodePath("SettingsPanel/VBoxContainer/audio/master_slider"), NodePath("SettingsPanel/VBoxContainer/audio/music_slider"), NodePath("SettingsPanel/VBoxContainer/audio/sfx_slider")]
sound_labels = [NodePath("SettingsPanel/VBoxContainer/audio/master_label"), NodePath("SettingsPanel/VBoxContainer/audio/music_label"), NodePath("SettingsPanel/VBoxContainer/audio/sfx_label")]

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.02, 1)

[node name="VignetteOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.3)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 72
text = "THE MASK"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.6, 0.8)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "Don't stare too long into the darkness..."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "▶ PLAY"
flat = true

[node name="SettingsButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "⚙ SETTINGS"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "✕ EXIT"
flat = true

[node name="SettingsPanel" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -269.0
offset_right = 199.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jld46")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="SettingsTitle" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 36
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="audio" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="master_label" type="Label" parent="SettingsPanel/VBoxContainer/audio"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Master: 100%"

[node name="master_slider" type="HSlider" parent="SettingsPanel/VBoxContainer/audio"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="music_label" type="Label" parent="SettingsPanel/VBoxContainer/audio"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Music: 100%"

[node name="music_slider" type="HSlider" parent="SettingsPanel/VBoxContainer/audio"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="sfx_label" type="Label" parent="SettingsPanel/VBoxContainer/audio"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "SFX: 100%"

[node name="sfx_slider" type="HSlider" parent="SettingsPanel/VBoxContainer/audio"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer2" type="Control" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "Sensitivity: 1.0"

[node name="SensitivitySlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="Spacer3" type="Control" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="video" type="VBoxContainer" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="res_label" type="Label" parent="SettingsPanel/VBoxContainer/video"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Resolution"

[node name="res_options" type="OptionButton" parent="SettingsPanel/VBoxContainer/video"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
selected = 1
allow_reselect = true
item_count = 4
popup/item_0/text = "1024x768"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1440x900"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[node name="fs_check" type="CheckBox" parent="SettingsPanel/VBoxContainer/video"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Full screen"

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "← GO BACK"
flat = true

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.45, 0.4, 0.5)
theme_override_font_sizes/font_size = 14
text = "v0.1 - Game Jam"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SettingsPanel/VBoxContainer/SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
[connection signal="item_selected" from="SettingsPanel/VBoxContainer/video/res_options" to="." method="setRes"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/video/fs_check" to="." method="setFs"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
